force-app/main/default/objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores the email address of the employee</description>
    <label>Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>