force-app/main/default/objects/Employee__c/fields/Number_Of_Requests__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Requests__c</fullName>
    <label>Number Of Requests</label>
    <summaryForeignKey>Request__c.Requester__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>