force-app/main/default/objects/Employee__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>