force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Block__c</columns>
    <columns>Email__c</columns>
    <columns>Team__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>